try to fix linear gradient on ios

--- a/source/stylesheets/_blog-common.sass
+++ b/source/stylesheets/_blog-common.sass
@@ -16,7 +16,7 @@
     display: block
     padding: 3em 0 0
     text-decoration: none
-    +transition(all 500ms)
+    +transition(all 300ms)
     &:after
       content: ''
       position: absolute
@@ -24,10 +24,10 @@
       right: 0
       top: 0
       bottom: 0
-      @include background(linear-gradient(transparent 13em, $back1 16em))
+      @include background(linear-gradient(rgba($back1,0) 14em, $back1 17em))
       pointer-events: none
     &:hover
-      +transform(translateY(-2em))
+      +transform(translateY(-2.5em))
       h3,h2
         color: $fore1
       p
